tests/test_assets/parser/invalid/integer_literal_exceeds_u64.cog
TOO_LARGE :: 18446744073709551616;
