tests/test_assets/parser/invalid/integer_literal_exceeds_u64.expected
error: integer literal exceeds u64 range
TOO_LARGE :: 18446744073709551616;
             ^~~~~~~~~~~~~~~~~~~~
